--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <div class="cobertura"></div>
         <div class="bizcocho"></div>
-        <h1>happy birthday!</h1>
-        <p>NEEN</p>
+        <h1>Happy Birthday</h1>
+        <p>I love you so much!!</p>
     </div>
     <audio id="backgroundMusic" autoplay loop>
         <source src="Ruthlessness.mp3" type="audio/mp3">
